--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.5.0",
+    "@heroicons/vue": "^1.0.6",
+    "@vue-hero-icons/outline": "^1.7.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
